# gnome-shell-extensions

./: .editorconfig  .gitignore  .gitlab-ci.yml  .gitmodules  HACKING  HACKING.md  Makefile.am  NEWS  README  README.md  REUSE.toml  autogen.sh  configure.ac  export-zips.sh  extension.mk  gnome-shell-extensions.doap  include.mk  local-install.sh  meson.build  meson.options  meson_options.txt  settings.mk
.gitlab-ci/: commit-rules.yml  commitrules.yml  run-eslint  run-eslint.sh
.gitlab/issue_templates/: Default.md  Default.md.license  Feature.md  Feature.md.license
.reuse/: dep5
data/: 00_org.gnome.shell.extensions.classic.gschema.override  HACKING  Makefile.am  classic.json.in  gnome-classic-high-contrast.css  gnome-classic-wayland.desktop.in  gnome-classic-xorg.desktop.in  gnome-classic.css  gnome-classic.desktop.in  gnome-classic.scss  gnome-classic.session  gnome-classic.session.conf  gnome-classic.session.desktop.in  gnome-classic.session.desktop.in.in  gnome-shell-classic.desktop.in.in  meson.build  org.gnome.shell.extensions.classic-overrides.gschema.xml  org.gnome.shell.extensions.classic-overrides.gschema.xml.in  update-theme.sh
extensions/: Makefile.am  meson.build  meson.build.template
extensions/alternate-tab/: Makefile.am  allThumbnails.js  extension.js  meson.build  metadata.json  metadata.json.in  org.gnome.shell.extensions.alternate-tab.gschema.xml.in  prefs.js  settings.js  workspaceIcons.js
extensions/alternative-status-menu/: Makefile.am  extension.js  metadata.json.in  org.gnome.shell.extensions.alternative-status-menu.gschema.xml.in  stylesheet.css
extensions/apps-menu/: Makefile.am  extension.js  meson.build  metadata.json.in  org.gnome.shell.extensions.apps-menu.gschema.xml  stylesheet.css
extensions/auto-move-windows/: Makefile.am  extension.js  meson.build  metadata.json.in  org.gnome.shell.extensions.auto-move-windows.gschema.xml  org.gnome.shell.extensions.auto-move-windows.gschema.xml.in  prefs.js
extensions/default-min-max/: Makefile.am  extension.js  metadata.json.in
extensions/desktop-icons/: dbusUtils.js  desktopContainer.js  desktopGrid.js  desktopIconsUtil.js  desktopManager.js  extension.js  fileContainer.js  fileItem.js  meson.build  metadata.json.in  queue.js  settings.js  stylesheet.css
extensions/dock/: Makefile.am  extension.js  metadata.json.in  org.gnome.shell.extensions.dock.gschema.xml.in  stylesheet.css
extensions/drive-menu/: Makefile.am  extension.js  meson.build  metadata.json.in  stylesheet.css
extensions/example/: Makefile.am  extension.js  meson.build  metadata.json  metadata.json.in  org.gnome.shell.extensions.example.gschema.xml  org.gnome.shell.extensions.example.gschema.xml.in  prefs.js
extensions/gajim/: Makefile.am  extension.js  metadata.json.in
extensions/heads-up-display/: extension.js  headsUpMessage.js  meson.build  metadata.json.in  org.gnome.shell.extensions.heads-up-display.gschema.xml  prefs.js  stylesheet.css
extensions/horizontal-workspaces/: extension.js  metadata.json.in
extensions/launch-new-instance/: Makefile.am  extension.js  meson.build  metadata.json.in
extensions/light-style/: extension.js  meson.build  metadata.json.in
extensions/native-window-placement/: Makefile.am  extension.js  meson.build  metadata.json.in  org.gnome.shell.extensions.native-window-placement.gschema.xml  org.gnome.shell.extensions.native-window-placement.gschema.xml.in  stylesheet.css
extensions/places-menu/: Makefile.am  extension.js  meson.build  metadata.json.in  placeDisplay.js  stylesheet.css
extensions/screenshot-window-sizer/: Makefile.am  extension.js  meson.build  metadata.json.in  org.gnome.shell.extensions.screenshot-window-sizer.gschema.xml  org.gnome.shell.extensions.screenshot-window-sizer.gschema.xml.in  stylesheet.css
extensions/static-workspaces/: Makefile.am  extension.js  metadata.json.in
extensions/status-icons/: extension.js  meson.build  metadata.json.in
extensions/system-monitor/: extension.js  meson.build  metadata.json.in  stylesheet.css
extensions/system-monitor/icons/: temperature-symbolic.svg.license
extensions/system-monitor/schemas/: org.gnome.shell.extensions.system-monitor.gschema.xml
extensions/systemMonitor/: Makefile.am  extension.js  metadata.json.in  stylesheet.css
extensions/user-theme/: Makefile.am  extension.js  meson.build  metadata.json.in  org.gnome.shell.extensions.user-theme.gschema.xml.in  prefs.js  util.js
extensions/window-list/: .workspaceIndicator.js.swp  Makefile.am  classic.css  extension.js  meson.build  metadata.json.in  org.gnome.shell.extensions.window-list.gschema.xml  org.gnome.shell.extensions.window-list.gschema.xml.in  prefs.js  stylesheet-dark.css  stylesheet-light.css  stylesheet.css  windowPicker.js  workspaceIndicator.js
extensions/windowsNavigator/: Makefile.am  extension.js  metadata.json  metadata.json.in  stylesheet.css
extensions/workspace-indicator/: Makefile.am  extension.js  meson.build  metadata.json.in  prefs.js  stylesheet-dark.css  stylesheet-light.css  stylesheet.css  workspaceIndicator.js  workspacePrefs.js
extensions/workspace-indicator/schemas/: org.gnome.shell.extensions.workspace-indicator.gschema.xml
extensions/xrandr-indicator/: Makefile.am  extension.js  extension.js~  metadata.json  metadata.json.in
lib/: convenience.js
lint/: eslintrc-gjs.yml  eslintrc-legacy.json  eslintrc-shell.json  eslintrc-shell.yml
meson/: generate-stylesheets.py  session-post-install.py
po/: LINGUAS  Makevars  POTFILES.in  ab.po  af.po  an.po  ar.po  as.po  be.po  bg.po  bn_IN.po  bs.po  ca.po  ca@valencia.po  cs.po  da.po  de.po  el.po  en_GB.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fr.po  fur.po  gd.po  gl.po  gu.po  he.po  hi.po  hr.po  hu.po  ia.po  id.po  is.po  it.po  ja.po  ka.po  (+38 more)
tools/: eslint.config.js  package-lock.json  package.json  run-eslint.sh
