option('extension_set',
  type: 'combo',
  choices: ['classic', 'default', 'all'],
  value: 'default',
  description: 'Predefined sets of extensions'
)

option('enable_extensions',
  type: 'array',
  choices: ['alternate-tab', 'apps-menu', 'auto-move-windows', 'drive-menu', 'example', 'launch-new-instance', 'native-window-placement', 'places-menu', 'screenshot-window-sizer', 'user-theme',  'window-list', 'windowsNavigator', 'workspace-indicator'],
  value: [],
  description: 'Space separated list of extensions to enable instead of a predefined set.'
)

option('classic_mode',
  type: 'boolean',
  value: false,
  description: 'Enable installing data files for classic mode.'
)
