extension_data += configure_file(
  input: metadata_name + '.in',
  output: metadata_name,
  configuration: metadata_conf
)

extension_sources += files('dbusUtils.js')
extension_sources += files('desktopGrid.js')
extension_sources += files('desktopIconsUtil.js')
extension_sources += files('desktopManager.js')
extension_sources += files('fileItem.js')
extension_sources += files('settings.js')
